k3s/app.template.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatverse-app
  namespace: chatverse
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30081
  selector:
    app: chatverse-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatverse-app
  namespace: chatverse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatverse-app
  template:
    metadata:
      labels:
        app: chatverse-app
    spec:
      containers:
        - name: chatverse-app
          image: ${IMAGE_NAME}
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "768Mi"
              cpu: "1000m"
