k3s/kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: chatverse
spec:
  type: NodePort
  ports:
    - port: 9092
      targetPort: 9092
      nodePort: 31012
  selector:
    app: kafka
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: chatverse
spec:
  serviceName: "kafka"
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: bitnami/kafka:3.6.1-debian-11-r3
          ports:
            - containerPort: 9092
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
