k3s/zookeeper-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: chatverse
spec:
  type: ClusterIP
  selector:
    app: zookeeper
  ports:
    - port: 2181
      targetPort: 2181
